# HERMY

./: .gitignore  README.md  VENDORED.md  __init__.py  hermy_sessions.json  pyproject.toml
CubeSandbox-master/: CONTRIBUTING.md  PLATFORM.md  README.md
CubeSandbox-master/.github/: CODEOWNERS
CubeSandbox-master/.github/workflows/: build-check.yml  code-review.yml  issue-triage.yml
CubeSandbox-master/dev-env/: README.md  README_zh.md  prepare_image.sh  run_vm.sh  sync_to_vm.sh
CubeSandbox-master/docs/: index.md
CubeSandbox-master/network-agent/: README.md
config/: hermes_config_template.yaml  hermes_prompt.md
controller/: __init__.py  approval_ledger.py  event_logger.py  policy.py  runtime_controller.py
cua-main/: .gitignore  package-lock.json
cua-main/blog/: inside-macos-window-internals.md
cua-main/notebooks/: agent_nb.ipynb
cua_bridge/: cua_mcp_proxy.py
cube_bridge/: __init__.py  cube_mcp_server.py  requirements.txt
scripts/: audit-required-paths.sh  check-proto-drift.sh  hermy_doctor.py  run_local_tests.sh  start_cua_server.sh  start_cube_api.sh  test_local.sh  verify_cua_proxy.py  verify_cube_bridge.py
tests/: conftest.py  test_approval_ledger.py  test_config_template.py  test_cua_proxy_verification.py  test_cua_schema_injection.py  test_cua_tool_filter.py  test_cube_bridge.py  test_event_logger.py  test_governance.py  test_hermy_doctor.py  test_live_verifier.py  test_packaging.py  test_policy.py  test_readme_accuracy.py  test_runtime_controller.py  test_runtime_state_clean.py  test_session_persistence.py
(+86 files in other folders)
