[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermy-integration"
version = "0.1.0"
description = "HERMY integration scaffold for Hermes, CUA, and CubeSandbox."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "dawsonblock" }
]
dependencies = [
  "mcp>=1.2,<2",
  "e2b-code-interpreter>=0.3.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[project.scripts]
hermy-cube-mcp = "cube_bridge.cube_mcp_server:main"

[tool.setuptools]
packages = ["cube_bridge", "controller"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
